sfdx-source/main/default/objects/LogEntryTag__c/fields/LogLink__c.field-meta.xml
<CustomField>
    <fullName>LogLink__c</fullName>
    <formula>HYPERLINK( LogEntry__r.Logger__c, LogEntry__r.Logger__r.Name, &apos;_top&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log</label>
    <type>Text</type>
</CustomField>