sfdx-source/main/default/objects/LogEntryTag__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <description>An external ID field used to ensure that Log Entry Tag records are unique</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>An external ID field used to ensure that Log Entry Tag records are unique</inlineHelpText>
    <label>Unique ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>